--- a/.gitignore
+++ b/.gitignore
@@ -2,31 +2,18 @@
 *.d
 
 # Compiled Object files
-*.slo
-*.lo
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
 
 # Executables
-*.exe
-*.out
-*.app
+*.hex
+
+# qmake generated
+.qmake.stash
+Makefile
+
+# host specific config
+*.pro.user*
+
+# binary output files
+bin/*
+!bin/.gitkeep
